--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>W3crm : React Redux Customer Relationship Management Admin Dashboard</title>
+    <title>Predilecta WEB</title>
   </head>
   <body 
     data-typography="poppins" data-theme-version="light" data-layout="vertical" 
